# CmakeTutorail_tomerw

./: .gitignore  ReadMe.md
chapters/: 00-intro-and-mental-model.md  01-first-project.md  02-build-systems-and-generators.md  03-building-and-loading-a-dll.md  04-usage-requirements.md  05-configurations-debug-release.md  06-testing-with-ctest.md  07-googletest-and-fetchcontent.md  08-external-scripts-and-generated-files.md  09-versioning-in-cmake.md  10-windows-exe-dll-version-info.md  11-install-export-package.md  12-SWIG-and-python-interface-generation.md  13-practical-commands-and-gotchas.md  SWIG-and-python-interface-generation.md  libraries.md  usage-requirements.md
examples/: ExamplesHowTo.md
examples/01-first-project/: main.cpp
examples/02-build-systems-and-generators/: CMakeLists.txt  main.cpp
examples/03-libraries/: CMakeLists.txt
examples/03-libraries/app/: main.cpp
examples/03-libraries/math_dll/: math_api.cpp  math_api.h  math_exports.h
examples/04-usage-requirements/: CMakeLists.txt
examples/04-usage-requirements/app/: main.cpp
examples/04-usage-requirements/core_math/include/core_math/: math_api.h
examples/04-usage-requirements/core_math/include/math_headers/: build_info.h
examples/04-usage-requirements/core_math/src/: internal_math_helpers.h  math_api.cpp
examples/05-configurations-debug-release/: CMakeLists.txt  conditional_depnded.h  main.cpp
examples/06-testing-with-ctest/: CMakeLists.txt
examples/06-testing-with-ctest/Src/: math_utils.cpp  math_utils.h
examples/06-testing-with-ctest/tests/: test_math.cpp
examples/07-googletest-and-fetchcontent/: CMakeLists.txt  README.md
examples/07-googletest-and-fetchcontent/tests/: test_math.cpp
examples/08-external-scripts-and-generated-files/: CMakeLists.txt
examples/08-external-scripts-and-generated-files/app/: main.cpp
examples/08-external-scripts-and-generated-files/tools/: make_generated_header.py
examples/09-versioning-in-cmake/: CMakeLists.txt
examples/09-versioning-in-cmake/app/: main.cpp
examples/09-versioning-in-cmake/cmake/: bump_version.cmake
examples/10-windows-exe-dll-version-info/: CMakeLists.txt
examples/10-windows-exe-dll-version-info/app/: main.cpp
examples/10-windows-exe-dll-version-info/dll/: demo_api.cpp  demo_api.h  demo_exports.h
examples/10-windows-exe-dll-version-info/resources/: app_version.rc.in  dll_version.rc.in
examples/11-install-export-package/: CMakeLists.txt  ReadMe.md  smoke_test_tutorial_math.cmd
examples/11-install-export-package/cmake/: TutorialMathConfig.cmake.in
examples/11-install-export-package/consumer/: CMakeLists.txt  main.cpp
examples/11-install-export-package/include/tutorial_math/: math_utils.h
examples/11-install-export-package/src/: math_utils.cpp
examples/12-swig-and-python-interface-generation/: CMakeLists.txt  ReadMe.md
examples/12-swig-and-python-interface-generation/python/: demo.py
examples/12-swig-and-python-interface-generation/swig/: math.i
tools/: ReadMe.md
tools/cmake/: CMakePresets.json  warnings.cmake
tools/docs/: clean-reset.md
