cmake_minimum_required(VERSION 3.23)

cmake_policy(SET CMP0078 NEW)
cmake_policy(SET CMP0086 NEW)

project(SwigPythonDemo LANGUAGES CXX)

set(UseSWIG_MODULE_VERSION 2)

find_package(SWIG REQUIRED COMPONENTS python)
include(UseSWIG)

find_package(Python3 REQUIRED COMPONENTS Interpreter Development.Module)

set(PYTHON_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/python")
set(SWIG_WRAPPER_DIR "${CMAKE_CURRENT_BINARY_DIR}/swig")
file(MAKE_DIRECTORY "${PYTHON_OUTPUT_DIR}")
file(MAKE_DIRECTORY "${SWIG_WRAPPER_DIR}")

# -----------------------------------------------------------------------------
# Native library
# -----------------------------------------------------------------------------
add_library(core_math STATIC
    cpp/math_utils.cpp
)

target_include_directories(core_math
    PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}/cpp"
)

target_compile_features(core_math PUBLIC cxx_std_17)

# -----------------------------------------------------------------------------
# SWIG interface configuration
# These source properties must be set before swig_add_library().
# -----------------------------------------------------------------------------
set_property(SOURCE swig/math.i PROPERTY CPLUSPLUS ON)
set_property(SOURCE swig/math.i PROPERTY USE_TARGET_INCLUDE_DIRECTORIES TRUE)
set_property(SOURCE swig/math.i PROPERTY USE_SWIG_DEPENDENCIES TRUE)
set_property(SOURCE swig/math.i PROPERTY OUTPUT_DIR "${PYTHON_OUTPUT_DIR}")
set_property(SOURCE swig/math.i PROPERTY OUTFILE_DIR "${SWIG_WRAPPER_DIR}")

# -----------------------------------------------------------------------------
# Python module generated by SWIG
# -----------------------------------------------------------------------------
swig_add_library(tutorial_math
    TYPE MODULE
    LANGUAGE python
    OUTPUT_DIR "${PYTHON_OUTPUT_DIR}"
    OUTFILE_DIR "${SWIG_WRAPPER_DIR}"
    SOURCES swig/math.i
)

target_include_directories(tutorial_math
    PRIVATE
        "${CMAKE_CURRENT_SOURCE_DIR}/cpp"
)

set_property(TARGET tutorial_math PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE)

target_link_libraries(tutorial_math
    PRIVATE
        core_math
        Python3::Module
)

target_compile_features(tutorial_math PRIVATE cxx_std_17)

set_target_properties(tutorial_math PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PYTHON_OUTPUT_DIR}"
    RUNTIME_OUTPUT_DIRECTORY "${PYTHON_OUTPUT_DIR}"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib"
)

# Copy the Python demo script into the output directory so it can import
# tutorial_math.py and the compiled extension from the same place.
configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/python/demo.py"
    "${PYTHON_OUTPUT_DIR}/demo.py"
    COPYONLY
)

add_custom_target(run_demo
    COMMAND Python3::Interpreter "${PYTHON_OUTPUT_DIR}/demo.py"
    DEPENDS tutorial_math
    WORKING_DIRECTORY "${PYTHON_OUTPUT_DIR}"
    COMMENT "Run the SWIG-generated Python demo"
)